--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,11 @@
 	height: 100vh;
 	width: 100vw;
 	background-color: black;
-	background-size: 100vw 100vh;
 	text-align: center;
 	line-height: 100vh;
-	font-size: 5vw;
+	font-size: 5vmin;
+	overflow-y: hidden;
 	animation: 2s noscript linear;
-	font-family: "Ubuntu Mono";
+	font-family: Ubuntu Mono, Ubuntu;
 	color: white;
 }
