--- a/css/main.css
+++ b/css/main.css
@@ -26,5 +26,12 @@
 
 /* Main CSS */
 canvas {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100vw;
+	image-rendering: -webkit-pixelated;
+	image-rendering: pixelated;
 	background: black;
 }
